# JavaBoolector

./: .gitignore  .gitmodules  Makefile  README.md  assembly.xml  configure.sh  pom.xml
c/: .configure.sh.swp  CMakeLists.txt  JavaBoolector.c  JavaBoolector.h  configure.sh  jniFileRead.c  lib_in_resources.sh
java/: build.xml  gen_native_h.sh  pom.xml
java/src/main/java/: ArrayNode.java  ArraySort.java  BitvecNode.java  BitvecNodeTest.java  BitvecSort.java  BoolNode.java  BoolSort.java  BoolectorFun.java  BoolectorNode.java  BoolectorObject.java  BoolectorObjectTest.java  BoolectorSat.java  BoolectorSort.java  Btor.java  Function.java  JBoolectorNode.java  JBoolectorSat.java  JBoolectorSort.java  JBtor.java  JavaBoolector.java  Native.java  NativeUtils.java  moveH.sh
java/src/main/java/io/github/boolector/: ArrayNode.java  ArraySort.java  BitvecNode.java  BitvecSort.java  BoolNode.java  BoolSort.java  BoolectorFun.java  BoolectorNode.java  BoolectorObject.java  BoolectorSat.java  BoolectorSort.java  Btor.java  Function.java  Native.java  NativeUtils.java  moveH.sh
java/src/test/: BitvecNodeTest.java  BitvecSortTest.java  BoolectorNodeTest.java  FunctionTest.java
src/main/c/: org_jetbrains_research_boolector_Native.c  org_jetbrains_research_boolector_Native.h  org_vorpal_research_boolector_Native.c  org_vorpal_research_boolector_Native.h
src/main/java/org/jetbrains/research/boolector/: ArrayNode.java  ArraySort.java  BitvecNode.java  BitvecSort.java  BoolNode.java  BoolSort.java  BoolectorFunction.java  BoolectorNode.java  BoolectorObject.java  Btor.java  (+7 more)
(+45 files in other folders)
